--- a/Projeto Jogo da Velha/index.html
+++ b/Projeto Jogo da Velha/index.html
@@ -8,7 +8,46 @@
 </head>
 <body>
     
-    <h1>Olá</h1>
+    <h1>Jogo da Velha</h1>
+
+    <div id="buttons-container">
+        <button id="2-players">2 Jogadores</button>
+        <button id="ai-player">Contra IA</button>
+    </div>
+
+    <div class="hide" id="container">
+
+        <div class="box" id="block-1"></div>
+        <div class="box" id="block-2"></div>
+        <div class="box" id="block-3"></div>
+        <div class="box" id="block-4"></div>
+        <div class="box" id="block-5"></div>
+        <div class="box" id="block-6"></div>
+        <div class="box" id="block-7"></div>
+        <div class="box" id="block-8"></div>
+        <div class="box" id="block-9"></div>
+
+        <div id="scoreboard-container">
+            <span class="score-box">
+                <span id="x-scoreboard">X</span>:
+                <span id="scoreboard-1">0</span>
+            </span>
+            <span class="score-box">
+                <span id="o-scoreboard">X</span>:
+                <span id="scoreboard-2">0</span>
+            </span>
+        </div><!-- #scoreboard-container -->
+
+    </div><!-- Container -->
+
+    <div class="hide">
+        <div class="x">X</div>
+        <div class="o"></div>
+    </div><!-- Hide -->
+
+    <div class="hide" id="message">
+        <p></p>
+    </div><!--Hide #message-->
 
     <script src="js/scripts.js"></script>
 </body>
