--- a/Projeto Jogo da Velha/index.html
+++ b/Projeto Jogo da Velha/index.html
@@ -28,12 +28,13 @@
         <div class="box" id="block-9"></div>
 
         <div id="scoreboard-container">
+            <h2>Placar:</h2>
             <span class="score-box">
                 <span id="x-scoreboard">X</span>:
                 <span id="scoreboard-1">0</span>
             </span>
             <span class="score-box">
-                <span id="o-scoreboard">X</span>:
+                <span id="o-scoreboard"></span>:
                 <span id="scoreboard-2">0</span>
             </span>
         </div><!-- #scoreboard-container -->
@@ -46,7 +47,7 @@
     </div><!-- Hide -->
 
     <div class="hide" id="message">
-        <p></p>
+        <p>asdf</p>
     </div><!--Hide #message-->
 
     <script src="js/scripts.js"></script>
